changed scrolling ref to be the parent ref, seems to re-enable drag scrolling of the hourly forecast.  need to do some bug fixes (view jumps around in some cases) though

--- a/client/src/components/extendedForecast.css
+++ b/client/src/components/extendedForecast.css
@@ -128,16 +128,22 @@ line {
 
 #forecastResults {
     overflow-x: scroll;
-    /* width: 8000px; */
     width: 7200px;
-    /* position: absolute; */
     overflow-y: hidden;
-    /* right: 500px; */
     height: 45rem;
     white-space: nowrap;
     -webkit-user-select: none;
     user-select: none;
 }
+
+/* #forecastResults {
+    width: 100%;
+    overflow-y: hidden;
+    height: 45rem;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    user-select: none;
+} */
 
 #forecastResultsExtended {
     width: 100%;
